--- a/.travis.yml
+++ b/.travis.yml
@@ -33,14 +33,15 @@ install:
   # pymatgen master
   #- git clone https://github.com/materialsproject/pymatgen.git && cd pymatgen && pip install -q -r requirements.txt && pip install -q -r requirements-optional.txt && python setup.py install && cd ../
   - conda install -c abinit abipy
-  - conda install -c abinit abinit=8.2.2
+  #- conda install -c abinit abinit=8.2.2
+  - conda install -c gmatteo abinit=8.6.1
 
   # See https://github.com/BVLC/caffe/issues/3884 and https://docs.continuum.io/mkl-optimizations/
   #- conda install nomkl
   #- conda install gcc scipy
   #- conda install pandas
   #- conda install netcdf4 
-  # See hSttps://github.com/ContinuumIO/anaconda-issues/issues/1360
+  # See https://github.com/ContinuumIO/anaconda-issues/issues/1360
   #- conda install hdf4=4.2.12
   - pip install pytest scripttest nose nose-exclude
   - pip install pep8 python-coveralls
