--- a/.travis.yml
+++ b/.travis.yml
@@ -15,28 +15,47 @@ matrix:
   include:
     - os: linux
       python: 2.7
-      env: ABINIT_VERSION=8.6.1
+      env: 
+        - ABINIT_VERSION=8.6.1 ABIPY_INSTALLER=conda
     - os: linux
       python: 3.6
-      env: ABINIT_VERSION=8.6.1 ABIPY_COVERALLS=yes
+      env: 
+        - ABINIT_VERSION=8.6.1 ABIPY_INSTALLER=pip ABIPY_COVERALLS=yes
+#    - os: linux
+#      python: 3.7
+#      # https://github.com/travis-ci/travis-ci/issues/9815
+#      dist: xenial
+#      sudo: true
+#      env: 
+#        - ABIPY_INSTALLER=pip
 
 install:
   #- set -ev  # exit on first error, print each command
   - env
   - ulimit -s unlimited
 
-  # pip-based installation.
-  #- travis_wait pip install -r requirements.txt
-  #- travis_wait pip install -r requirements-optional.txt
-  #
-  # Install conda https://conda.io/docs/travis.html
-  - source dev_scripts/conda_get.sh
-  - source dev_scripts/conda_install.sh
-  #- conda uninstall -y pymatgen
-  #- conda uninstall -y abipy
+  - |
+      if [ "${ABIPY_INSTALLER}" == "pip" ]; then
+        # pip-based installation.
+        source dev_scripts/conda_get.sh  # Needed for Abinit
+
+        travis_wait pip install -r requirements.txt
+        travis_wait pip install -r requirements-optional.txt
+  
+      elif [ "${ABIPY_INSTALLER}" == "conda" ]; then
+        # Install conda https://conda.io/docs/travis.html
+        source dev_scripts/conda_get.sh
+        source dev_scripts/conda_install.sh
+        #- conda uninstall -y pymatgen
+        #- conda uninstall -y abipy
+      fi
 
   # Install abinit from abinit conda channel.
-  #- conda config --add channels conda-forge
+  - echo "Installing abinit from abinit channel ..."
+  - conda config --add channels conda-forge
+  - conda install -y -c abinit abinit=${ABINIT_VERSION}
+  - abinit --version
+  - abinit --build
 
   # Get pymatgen from matsci
   #- conda config --add channels matsci
@@ -60,7 +79,6 @@ script: ./dev_scripts/runtests.sh
 branches:
   only:
     - master
-    - develop
 
 after_success:
     - if [[ "${ABIPY_COVERALLS}" == "yes" ]]; then coveralls; fi
