--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,11 @@ matrix:
     - os: linux
       python: 2.7
       env: 
-        - ABINIT_VERSION=8.6.1 ABIPY_INSTALLER=conda
+        - ABIPY_INSTALLER=conda
     - os: linux
       python: 3.6
       env: 
-        - ABINIT_VERSION=8.6.1 ABIPY_INSTALLER=pip ABIPY_COVERALLS=yes
+        - ABIPY_INSTALLER=pip ABIPY_COVERALLS=yes
 #    - os: linux
 #      python: 3.7
 #      # https://github.com/travis-ci/travis-ci/issues/9815
