--- a/.travis.yml
+++ b/.travis.yml
@@ -14,20 +14,13 @@ env:
 matrix:
   include:
     - os: linux
-      python: 2.7
-      env: 
-        - ABIPY_INSTALLER=conda
-    - os: linux
       python: 3.6
       env: 
         - ABIPY_INSTALLER=pip ABIPY_COVERALLS=yes
-#    - os: linux
-#      python: 3.7
-#      # https://github.com/travis-ci/travis-ci/issues/9815
-#      dist: xenial
-#      sudo: true
-#      env: 
-#        - ABIPY_INSTALLER=pip
+    - os: linux
+      python: 3.7
+      env: 
+        - ABIPY_INSTALLER=conda
 
 install:
   #- set -ev  # exit on first error, print each command
@@ -38,7 +31,6 @@ install:
       if [ "${ABIPY_INSTALLER}" == "pip" ]; then
         # pip-based installation.
         source dev_scripts/conda_get.sh  # Needed for Abinit
-
         travis_wait pip install -r requirements.txt
         travis_wait pip install -r requirements-optional.txt
   
@@ -52,10 +44,9 @@ install:
 
   # Install abinit from abinit conda channel.
   - echo "Installing abinit from abinit channel ..."
-  - conda config --add channels conda-forge
-  - conda install -y -c abinit abinit=${ABINIT_VERSION}
-  - abinit --version
-  - abinit --build
+  #- conda install -y -c abinit abinit=${ABINIT_VERSION}
+  #- abinit --version
+  #- abinit --build
 
   # Get pymatgen from matsci
   #- conda config --add channels matsci
