--- a/dev_scripts/travis_manager.yml
+++ b/dev_scripts/travis_manager.yml
@@ -7,7 +7,7 @@ qadapters:
       job:
         mpi_runner: mpirun
         pre_run: 
-            - source activate test-environment
+            - source activate abinit-environment
       limits:
          min_cores: 1
          max_cores: 2
