--- a/setup.cfg
+++ b/setup.cfg
@@ -10,10 +10,11 @@ force = 1
 [bdist_wheel]
 universal=1
 
-[nosetests]
-verbosity=0
-with-doctest=1
-#exclude-dir=abipy/gui
+#[tool:pytest]
+#ignore=abipy/gui
+#addopt=--cov-config=.coveragerc --cov=abipy -v --doctest-modules pseudo_dojo  \
+#       --ignore=abipy/integration_tests --ignore=abipy/data/refs --ignore=abipy/scripts/ \
+#       --ignore=abipy/examples/plot --ignore=abipy/examples/flows --ignore=abipy/gui
 
 [pycodestyle]
 count = True
