--- a/.travis.yml
+++ b/.travis.yml
@@ -38,16 +38,13 @@ install:
         # Install conda https://conda.io/docs/travis.html
         source dev_scripts/conda_get.sh
         source dev_scripts/conda_install.sh
-        conda config --add channels abinit
-        pip install periodic_table_plotter
-        pip install atomicfile
       fi
 
   - python setup.py install
   - mkdir -p ${HOME}/.abinit/abipy
   - cp dev_scripts/travis_scheduler.yml ${HOME}/.abinit/abipy/scheduler.yml
   - cp dev_scripts/travis_manager.yml ${HOME}/.abinit/abipy/manager.yml
-    #- ./dev_scripts/pyclean.py .
+  - ./dev_scripts/pyclean.py .
 
 # command to run tests
 script: ./dev_scripts/runtests.sh
