--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,13 @@ env:
 matrix:
   include:
     - os: linux
-      python: 3.6
-      env:
-        - ABIPY_INSTALLER=pip ABIPY_COVERALLS=yes
-    - os: linux
       python: 3.7
       env:
-        - ABIPY_INSTALLER=conda
+        - ABIPY_INSTALLER=pip ABIPY_COVERALLS=yes
+      #- os: linux
+      #  python: 3.7
+      #  env:
+      #    - ABIPY_INSTALLER=conda
 
 install:
   #- set -ev  # exit on first error, print each command
